# ferroplan

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  IPC5-results.tgz  LICENSE-MIT  PROFILING.md  README.md  RELEASING.md  STATUS.md  ferroplan-roadmap.md  publish.sh
.claude/skills/ferroplan/: SKILL.md  reference.md
.github/workflows/: ci.yml  pages.yml
assets/logo-options/: README.md
benchmarks/: ATTRIBUTION.md  COMPARING.md  bazaar-thinks.md  bench_temporal.py  compare.py  get-ipc.sh  get-val.sh  ipc-results.md  ipc5-constraints.md  ipc5-metric-time.md  ipc5-prop.md  ipc5-qualitative-scoreboard.md  ipc5-scoreboard.md  ipc5-time.md  ipc67-diff.py  ipc67-netben.md  ipc67-portfolio.md  ipc67-results.md  ipc67-temporal.md  ipc67.py  ipc7-mco-t2.md  perf.py  profile.py  results.md  run.py  temporal-results.md
benchmarks/bench/: bazaar-chain-domain.pddl  bazaar-chain-x2.pddl  bazaar-chain-x2m.pddl  bazaar-chain.pddl  bazaar-redistribution.pddl  bazaar.pddl  fuel-gap-domain.pddl  fuel-gap-i1.pddl  gen_bazaar_chain.py  gen_kiln_pack.py  gripper-ground.pddl  gripper-search.pddl  kiln-gap-domain.pddl  kiln-gap-i1.pddl  kiln-pack-10.pddl  kiln-pack-12.pddl  kiln-pack-2.pddl  kiln-pack-4.pddl  kiln-pack-6.pddl  kiln-pack-8.pddl  kiln-pack-domain.pddl
benchmarks/encoding-ab/: .gitignore  README.md  RESULTS.md  asis.py  gen.py  run_experiment.py  selfcheck.py
benchmarks/encoding-ab/asis/: prohibited-consume.pddl
benchmarks/encoding-ab/metrics/: asis.txt  chain-data-table-inst.json  chain-data-table-temporal.json  chain-forall-inst.json  chain-forall-temporal.json  chain-specific-inst.json  chain-specific-temporal.json  converge-data-table-inst.json  converge-data-table-temporal.json  converge-forall-inst.json  converge-forall-temporal.json  converge-specific-inst.json  converge-specific-temporal.json  techtree-data-table-inst.json  techtree-data-table-temporal.json  techtree-forall-inst.json  techtree-forall-temporal.json  techtree-specific-inst.json  techtree-specific-temporal.json
benchmarks/encoding-ab/proto/: datatable-inst-p.pddl  datatable-inst.pddl  datatable-temporal.pddl  forall-inst-p.pddl  forall-inst.pddl  forall-temporal.pddl  specific-inst-p.pddl  specific-inst.pddl  specific-temporal.pddl
benchmarks/metrics/: baseline.json
benchmarks/scale/: README.md  gen.py  gen_domain.py  gen_hard.py  gen_jobshop.py  gen_scenarios.py  gen_suite.py  gen_village.py
benchmarks/scale/village/: README.md  t0-build-floor.pddl  (+6 more)
book/: book.toml
book/src/: SUMMARY.md  architecture.md  benchmarks.md  cli.md  gui.md  install.md  intro.md  library.md  metric-quality.md  pddl3.md  performance.md  results.md  session.md  temporal.md  try.md  tuning.md
crates/ferroplan/: Cargo.toml
crates/ferroplan-bevy/: .gitignore  Cargo.toml  build-wasm.sh
crates/ferroplan-bevy/demo/: adl-domain.pddl  adl-problem.pddl  domain.pddl  problem.pddl
crates/ferroplan-bevy/src/: anim.rs  blocks.rs  gantt.rs  icons.rs  interact.rs  main.rs  palette.rs  scene.rs  transport.rs  ui.rs  webhandoff.rs
crates/ferroplan-bevy/web/: index.html
crates/ferroplan-cli/: Cargo.toml
crates/ferroplan-cli/src/: main.rs
crates/ferroplan-gui/: Cargo.toml
crates/ferroplan-gui/src/: app.rs  canvas.rs  editor.rs  inspect.rs  main.rs  model.rs
crates/ferroplan-mcp/: Cargo.toml  README.md
crates/ferroplan-mcp/src/: main.rs
crates/ferroplan-mcp/tests/: protocol.rs
crates/ferroplan-py/: Cargo.toml  README.md  pyproject.toml
crates/ferroplan-py/src/: lib.rs
crates/ferroplan-wasm/: Cargo.toml  README.md  build.sh
crates/ferroplan-wasm/src/: lib.rs
crates/ferroplan-wasm/web/: bazaar-live.html  examples.js  index.html  worker.js
crates/ferroplan/benches/: planning.rs
crates/ferroplan/examples/: bazaar_live.rs  bazaar_thinks.rs  decompose.rs  game_think.rs  ground_probe.rs  invariants_coverage.rs  json_api.rs  many_minds.rs  op_probe.rs  orbit_probe.rs  parse.rs  replan.rs  solve.rs  stage_probe.rs  tground_probe.rs  validate_plan.rs  verify_plan.rs
crates/ferroplan/src/: api.rs  bitset.rs  clock.rs  constraints.rs  costs.rs  derived.rs  espc.rs  features.rs  ground.rs  hash.rs  heuristic.rs  invariants.rs  lama.rs  landmarks.rs  lexer.rs  lib.rs  orbits.rs  output.rs  packed.rs  par.rs  parser.rs  partition.rs  pddl3.rs  plan.rs  planner.rs  portfolio.rs  report.rs  resolve.rs  resource.rs  search.rs  selection.rs  session.rs  temporal.rs  trace.rs  tresolve.rs  tsched.rs  types.rs  verify.rs  viz.rs
crates/ferroplan/tests/: action_costs.rs  adl.rs  api.rs  constraints.rs  costs_prefs.rs  decompose.rs  espc.rs  ipc5_pref_metric.rs  ipc5_qual_metric.rs  landmarks.rs  netben.rs  node_cap.rs  orbits.rs  parse.rs  pddl3.rs  portfolio.rs  robustness.rs  tdemand.rs  temporal.rs
docs/: espc-preferences-spec.md  forensics-tpp.md  invariants-measurement.md  perf-notes.md  roadmap-0.10.md  roadmap-0.11.md  roadmap-0.12.md  roadmap-0.13.md  roadmap-0.14.md  roadmap-0.15.md  roadmap-0.16.md  roadmap-0.5.md  roadmap-0.6.md  roadmap-0.7.md  roadmap-0.8.md  roadmap-0.9.md  roadmap.md
examples/: BORDERS.md  README.md
examples/cabin/: README.md  crew-pair.pddl  crew-skilled.pddl  crew-solo.pddl  crew-trio.pddl  crew.pddl  domain.pddl  forge-1smith-crowd.pddl  forge-1smith.pddl  forge-2smith.pddl  forge-3smith.pddl  raise-cabin.pddl  raise-frame.pddl  skilled-crosstrained.pddl  skilled-specialists.pddl
examples/jobshop/: README.md  domain.pddl  p1.pddl  p2.pddl  p3.pddl  p4.pddl  p5.pddl  s10.pddl  s100.pddl  s100g.pddl  s20.pddl  s50.pddl  s50w.pddl
examples/logistics/: README.md  border-probe-4b.pddl  border-probe-4c.pddl  border-probe-handoff.pddl  border-probe-train1.pddl  domain.pddl  p1.pddl  p2.pddl  p3.pddl  p4.pddl  p5.pddl  p6.pddl  p7.pddl  p8.pddl
examples/reachability/: README.md  domain.pddl  problem.pddl
examples/rpg/: README.md  build-1worker.pddl  build-3workers.pddl  domain.pddl
examples/rpg-world/: README.md  domain.pddl
examples/village/: README.md  domain.pddl  graph.pddl  onesite.pddl
examples/villagers/: README.md  domain.pddl  errand.pddl  township.pddl
(+83 files in other folders)
