[workspace]
resolver = "2"
members = ["crates/ferroplan", "crates/ferroplan-cli", "crates/ferroplan-gui", "crates/ferroplan-bevy"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
license = "MIT OR Apache-2.0"
repository = "https://github.com/haroldhhersey/ferroplan"
homepage = "https://haroldhhersey.github.io/ferroplan"
authors = ["Harold Hersey <haroldhhersey@gmail.com>"]
keywords = ["pddl", "planner", "planning", "ai", "heuristic-search"]
categories = ["science", "command-line-utilities", "algorithms"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[profile.release]
lto = "thin"
codegen-units = 1

# Release-optimized but with debug symbols, for profiling (flamegraph / samply).
# Build with `cargo build --profile profiling`.
[profile.profiling]
inherits = "release"
debug = true
