[package]
name = "ferroplan-bevy"
description = "Bevy-based GUI for the ferroplan PDDL planner — visualize, inspect, and animate domains/problems"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[[bin]]
name = "ferroplan-bevy"
path = "src/main.rs"

[dependencies]
ferroplan = { path = "../ferroplan" }
bevy = "0.15"
futures-lite = "2"

# WASM build (browser GUI): getrandom needs a JS backend on wasm32. Two versions
# are in the tree (bevy deps); the 0.3 `wasm_js` backend also needs RUSTFLAGS
# `--cfg getrandom_backend="wasm_js"` (see build.sh).
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
getrandom_v3 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
