[package]
name = "ferroplan-bevy"
description = "Bevy-based GUI for the ferroplan PDDL planner — visualize, inspect, and animate domains/problems"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[[bin]]
name = "ferroplan-bevy"
path = "src/main.rs"

[dependencies]
ferroplan = { path = "../ferroplan" }
# Slimmed feature set (no audio/gltf/3d/scene/animation) to shrink the wasm GUI.
bevy = { version = "0.19", default-features = false, features = [
    "bevy_winit",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_sprite",
    "bevy_sprite_render",
    "bevy_text",
    "bevy_ui",
    "bevy_ui_render",
    "bevy_gizmos",
    "bevy_gizmos_render",
    "bevy_asset",
    "default_font",
    "webgl2",
    "x11",
    "multi_threaded",
] }
futures-lite = "2"

# WASM build (browser GUI): getrandom needs a JS backend on wasm32. Two versions
# are in the tree (bevy deps); the 0.3 `wasm_js` backend also needs RUSTFLAGS
# `--cfg getrandom_backend="wasm_js"` (see build.sh).
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
getrandom_v3 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
