[package]
name = "ferroplan-bevy"
description = "Bevy-based GUI for the ferroplan PDDL planner — visualize, inspect, and animate domains/problems"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[[bin]]
name = "ferroplan-bevy"
path = "src/main.rs"

[dependencies]
ferroplan = { path = "../ferroplan" }
# Slimmed feature set (no audio/gltf/3d/scene/animation) to shrink the wasm GUI.
bevy = { version = "0.19", default-features = false, features = [
    "bevy_winit",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_sprite",
    "bevy_sprite_render",
    "bevy_text",
    "bevy_ui",
    "bevy_ui_render",
    "bevy_gizmos",
    "bevy_gizmos_render",
    "bevy_asset",
    "default_font",
    "webgl2",
    "x11",
    "multi_threaded",
] }
futures-lite = "2"

# WASM build (browser GUI): getrandom needs a JS backend on wasm32. Two versions
# are in the tree (bevy deps); the 0.3 `wasm_js` backend also needs RUSTFLAGS
# `--cfg getrandom_backend="wasm_js"` (see build.sh).
#
# wasm-bindgen/web-sys read the Solver page's `ferroplan.handoff` localStorage
# entry at startup (the "Animate this plan" handoff — see webhandoff.rs). Pinned
# to the exact version already resolved workspace-wide (matches ferroplan-wasm's
# pin and the installed `wasm-bindgen` CLI) so there's only one copy in the tree.
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
getrandom_v3 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
wasm-bindgen = "=0.2.126"
web-sys = { version = "0.3", features = ["Window", "Storage", "console"] }
serde_json = { workspace = true }
