[package]
name = "ferroplan-mcp"
description = "Model Context Protocol server for the ferroplan PDDL planner (solve / validate / decompose over stdio)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
# Not published to crates.io yet (the release ships `ferroplan` + `ferroplan-cli`);
# flip this when we add it to the publish set.
publish = false

[[bin]]
name = "ferroplan-mcp"
path = "src/main.rs"

[dependencies]
ferroplan = { path = "../ferroplan", version = "0.4.1" }
serde = { workspace = true }
serde_json = { workspace = true }
