[package]
name = "ferroplan-mcp"
description = "Model Context Protocol server for the ferroplan PDDL planner (solve / validate / decompose over stdio)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
# In the publish set since 0.14.0 (library -> cli -> mcp, in that order).
publish = true

[[bin]]
name = "ferroplan-mcp"
path = "src/main.rs"

[dependencies]
ferroplan = { path = "../ferroplan", version = "0.15.0" }
serde = { workspace = true }
serde_json = { workspace = true }
