[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "ferroplan"
version = "0.14.0"
description = "Python bindings for the ferroplan PDDL planner"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT OR Apache-2.0" }
keywords = ["pddl", "planner", "planning", "ai"]
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Repository = "https://github.com/hhh42/ferroplan"

[tool.maturin]
# abi3 wheel — one build works across Python 3.8+
features = ["pyo3/extension-module"]
