[package]
name = "ferroplan-wasm"
description = "WebAssembly bindings for the ferroplan PDDL planner (run it in the browser)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ferroplan = { path = "../ferroplan" }
# Must match the installed `wasm-bindgen` CLI exactly.
wasm-bindgen = "=0.2.106"
serde_json = "1"
